--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
             <h1>Hi!</h1>
             <h2>I'm Wictor Niså</h2>
             <p>Webdeveloper and aspiring graphic designer.</p>
+            <p>Find out what I've been up to</p>
+            <i class="fas fa-arrow-down"></i>
           </div>
         </header>
       </div>
     </section>
   </body>
   <script src="js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@4.0.0/dist/simpleParallax.min.js"></script>
+
 </html>
