--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/menu.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/evil-icons@1.9.0/assets/evil-icons.min.css">
   </head>
   <body>
     <section class="head">
@@ -29,18 +30,22 @@
           </div>
         </div>
         <header class="showcase">
-          <div class="container showcase-inner">
-            <h1>Hi!</h1>
-            <h2>I'm Wictor Niså</h2>
+          <div class="container showcase-inner hidden">
+            <h1>Hello!</h1>
+            <h2 class="test">I'm <br>
+              <span class="hidden-span"> Wictor  Niså</span></h2>
             <p>Webdeveloper and aspiring graphic designer.</p>
             <p>Find out what I've been up to</p>
-            <i class="fas fa-arrow-down"></i>
           </div>
         </header>
       </div>
     </section>
+    <section class="about-container" id="about">
+      <div>
+
+      </div>
+
+    </section>
   </body>
   <script src="js/app.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@4.0.0/dist/simpleParallax.min.js"></script>
-
 </html>
