--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="css/menu.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/evil-icons@1.9.0/assets/evil-icons.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
   <body>
-    <section class="head">
+    <section class="head" id="index">
       <div class="hero-image">
         <div class="menu-wrap">
           <input type="checkbox" class="toggler">
@@ -20,7 +20,7 @@
             <div>
               <div>
                 <ul>
-                  <li><a href="#index.html">Home</a></li>
+                  <li><a href="#index">Home</a></li>
                   <li><a href="#about">About</a></li>
                   <li><a href="#projects">Projects</a></li>
                   <li><a href="#contact">Contact</a></li>
@@ -30,22 +30,35 @@
           </div>
         </div>
         <header class="showcase">
-          <div class="container showcase-inner hidden">
-            <h1>Hello!</h1>
-            <h2 class="test">I'm <br>
+          <div class="container showcase-inner hidden rellax">
+            <h1 class="hidden-h1">Hello!</h1>
+            <h2 class="hidden-h2">I'm <br>
               <span class="hidden-span"> Wictor  Niså</span></h2>
-            <p>Webdeveloper and aspiring graphic designer.</p>
-            <p>Find out what I've been up to</p>
+            <p class="hidden-p">Webdeveloper and aspiring graphic designer.</p>
+            <p class="hidden-p">Find out what I've been up to</p>
+            <a href="#projects"><i class="fas fa-angle-double-down"></i></a>
           </div>
         </header>
       </div>
     </section>
     <section class="about-container" id="about">
-      <div>
-
+      <div class="profile-info rellax">
+        <h2 class="bigH">Who am I?</h2>
+        <img class="profile-img" src="img/profile.jpg" alt="picture of me :)">
       </div>
 
+      <div class="profile-skills">
+        <div class="about-me">
+          <h2 class="bigH">This is me</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, dignissimos repellat quam magni voluptatem odio ad eveniet iusto quibusdam. Harum cupiditate magni quas architecto illum tempora esse doloremque, placeat amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus fugit nulla provident doloribus! Deserunt doloribus, aperiam impedit excepturi minima odit delectus atque dignissimos ipsa, dolor autem necessitatibus, quo dolorem consequatur!</p>
+        <div>
+
+        <div class="skills">
+
+        </div>
+      </div>
     </section>
   </body>
+  <script src="js/rellax.min.js"></script>
   <script src="js/app.js"></script>
 </html>
