finished about me section

--- a/index.html
+++ b/index.html
@@ -42,20 +42,38 @@
       </div>
     </section>
     <section class="about-container" id="about">
-      <div class="profile-info rellax">
+      <div class="profile-info">
         <h2 class="bigH">Who am I?</h2>
         <img class="profile-img" src="img/profile.jpg" alt="picture of me :)">
       </div>
 
       <div class="profile-skills">
         <div class="about-me">
-          <h2 class="bigH">This is me</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, dignissimos repellat quam magni voluptatem odio ad eveniet iusto quibusdam. Harum cupiditate magni quas architecto illum tempora esse doloremque, placeat amet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus fugit nulla provident doloribus! Deserunt doloribus, aperiam impedit excepturi minima odit delectus atque dignissimos ipsa, dolor autem necessitatibus, quo dolorem consequatur!</p>
+          <h2 class="bigH">About me</h2>
+          <p>My name is Wictor Niså and I'm currently located in Sweden. Been working in retail for about 4 years and thinking to myself that I wanted to pursue my dream career, I started this journey of becoming a Webdeveloper. When I'm not typing away at some project I love playing some golf, read books or just hang out at the gym and lift really heavy things.</p>
         <div>
 
         <div class="skills">
-
+          <h2>Some of my skills</h2>
+          <ul class="skill-ul">
+            <li><p class="skill-li">HTML5</p></li>
+            <li><p class="skill-li">CSS3</p></li>
+            <li><p class="skill-li">SASS</p></li>
+            <li><p class="skill-li">JavaScript</p></li>
+            <li><p class="skill-li">Git</p></li>
+          </ul>
         </div>
+
+        <div class="certifi">
+          <h2 class="bigH">My certificates</h2>
+          <img class="certifi-img" src="img/placeholder.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section class="project-container" id="projects">
+      <div class="project-list">
+      <h2>Take a look at some of my projects</h2>
       </div>
     </section>
   </body>
