--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
 
     <section class="project-container" id="projects">
       <div class="project-list">
-      <h2>Take a look at some of my projects</h2>
+      <h2 class="bigH">Take a look at some of my projects</h2>
+      <ul class="skill-ul">
+        <li><p class="skill-li-p">Photo Gallery</p></li>
+        <li><p class="skill-li-p">Gameshow App</p></li>
+        <li><p class="skill-li-p">Web Dashboard</p></li>
+        <li><p class="skill-li-p">Employee directory</p></li>
+      </ul>
       </div>
     </section>
   </body>
