working on modal content

--- a/index.html
+++ b/index.html
@@ -75,11 +75,17 @@
       <div class="project-list">
       <h2 class="bigH">Take a look at some of my projects</h2>
       <ul class="skill-ul">
-        <li><p class="skill-li-p">Photo Gallery</p></li>
-        <li><p class="skill-li-p">Gameshow App</p></li>
-        <li><p class="skill-li-p">Web Dashboard</p></li>
-        <li><p class="skill-li-p">Employee directory</p></li>
+        <li><p class="skill-li-p project1">Photo Gallery</p></li>
+        <li><p class="skill-li-p project2">Gameshow App</p></li>
+        <li><p class="skill-li-p project3">Web Dashboard</p></li>
+        <li><p class="skill-li-p project4">Employee directory</p></li>
       </ul>
+      </div>
+
+      <div id="simpleModal" class="modal">
+        <div class="modal-content">
+
+        </div>
       </div>
     </section>
   </body>
