--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@
         </div>
       </div>
     </section>
+
+    <section class="contact-container" id="contact">
+      <div class="contact-info">
+        <h2 class="bigH">Contact me</h2>
+        <p>Like anything you see? Reach out to me!</p>
+        <a class="contact-a" href="mailto:wictornisa@hotmail.com">wictornisa@hotmail.com</a>
+        <a class="contact-a" href="https://github.com/WictorNisa" target="_blank">Github</a>
+        <a class="contact-a" href="https://www.linkedin.com/in/wictor-nis%C3%A5-9b8bab183/" target="_blank">Linkedin</a>
+      </div>
+
+      <div class="copy-right">
+        <p>&#169; 2019 Wictor Niså</p>
+      </div>
+    </section>
   </body>
   <script src="js/rellax.min.js"></script>
   <script src="js/app.js"></script>
