--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
           </div>
         </div>
         <header class="showcase">
+          <div class="desktop-menu">
+            <ul>
+              <li><a href="#index">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
           <div class="container showcase-inner hidden rellax">
             <h1 class="hidden-h1">Hello!</h1>
             <h2 class="hidden-h2">I'm <br>
@@ -51,7 +59,8 @@
         <div class="about-me">
           <h2 class="bigH">About me</h2>
           <p>My name is Wictor Niså and I'm currently located in Sweden. Been working in retail for about 4 years and thinking to myself that I wanted to pursue my dream career, I started this journey of becoming a Webdeveloper. When I'm not typing away at some project I love playing some golf, read books or just hang out at the gym and lift really heavy things.</p>
-        <div>
+        </div>
+      </div>  
 
         <div class="skills">
           <h2>Some of my skills</h2>
