--- a/index.html
+++ b/index.html
@@ -97,6 +97,59 @@
       </div>
     </section>
 
+    <section class="desktop-project-container" id="projects">
+      <h2 class="bigH" id="projecth2">Take a look at some of my projects</h2>
+        <div class="left1">
+          <img class="desktop-project-img" src="img/project-5-img.png" alt="">
+        </div>
+        <div class="right1">
+          <h2 class="bigH">Photo Gallery</h2>
+          <p>A photo gallery project where I had to use CSS grids and the JQuery library and two plugins, one of them being a lightbox plugin.</p>
+          <div class="desktop-buttons">
+            <button class="github-button"><a target="_blank" href="https://github.com/WictorNisa/techdegree-project5">Github &#9839;</a></button>
+            <button class="liveproject-button"><a target="_blank"
+            href="https://agitated-lamport-3acfa8.netlify.com">Live Example &#187;</a></button>
+          </div>
+        </div>
+        <div class="left2">
+          <img class="desktop-project-img" src="img/project-6-img.png" alt="">
+        </div>
+        <div class="right2">
+          <h2 class="bigH">Gameshow App</h2>
+          <p>A Gameshow app where I had alot of JavaScript pratice working with arrays and the DOM.</p>
+          <div class="desktop-buttons">
+            <button class="github-button"><a target="_blank" href="https://github.com/WictorNisa/techdegree-project5">Github &#9839;</a></button>
+            <button class="liveproject-button"><a target="_blank"
+            href="https://agitated-lamport-3acfa8.netlify.com">Live Example &#187;</a></button>
+          </div>
+        </div>
+
+        <div class="left3">
+          <img class="desktop-project-img" src="img/project-7-img.png" alt="">
+        </div>
+        <div class="right3">
+          <h2 class="bigH">Web Dashboard</h2>
+          <p>A cool Web dashboard where I had to work with all kinds of tools like, CSS grids, inline SVG and the chart.js library.</p>
+          <div class="desktop-buttons">
+            <button class="github-button"><a target="_blank" href="https://github.com/WictorNisa/techdegree-project5">Github &#9839;</a></button>
+            <button class="liveproject-button"><a target="_blank"
+            href="https://agitated-lamport-3acfa8.netlify.com">Live Example &#187;</a></button>
+          </div>
+        </div>
+        <div class="left4">
+          <img class="desktop-project-img" src="img/project-8-img.png" alt="">
+        </div>
+        <div class="right4">
+          <h2 class="bigH">Employee Directory</h2>
+          <p>A very tough but fun project where I had to work with APIS. I got practice with the fetch api, promises and displaying random users everytime the user reloads the interface.</p>
+          <div class="desktop-buttons">
+            <button class="github-button"><a target="_blank" href="https://github.com/WictorNisa/techdegree-project5">Github &#9839;</a></button>
+            <button class="liveproject-button"><a target="_blank"
+            href="https://agitated-lamport-3acfa8.netlify.com">Live Example &#187;</a></button>
+          </div>
+        </div>
+    </section>
+
     <section class="contact-container" id="contact">
       <div class="contact-info">
         <h2 class="bigH">Contact me</h2>
