--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="certifi">
           <h2 class="bigH">My certificates</h2>
-          <img class="certifi-img" src="img/placeholder.jpg" alt="">
+          <img class="certifi-img" src="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/12880007" alt="">
         </div>
     </section>
 
