--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <header class="showcase">
-          <div class="desktop-menu">
+          <div class="desktop-menu rellax">
             <ul>
               <li><a href="#index">Home</a></li>
               <li><a href="#about">About</a></li>
@@ -51,8 +51,8 @@
     </section>
     <section class="about-container" id="about">
       <div class="profile-info">
-        <h2 class="bigH">Who am I?</h2>
-        <img class="profile-img" src="img/profile.jpg" alt="picture of me :)">
+        <h2 class="bigH" id="hide-desktop-h2">Who am I?</h2>
+        <img class="profile-img slide-in" src="img/profile.jpg" alt="picture of me :)">
       </div>
 
       <div class="profile-skills">
@@ -75,14 +75,14 @@
 
         <div class="certifi">
           <h2 class="bigH">My certificates</h2>
-          <img class="certifi-img" src="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/12880007" alt="">
+          <img class="certifi-img slide-in" src="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/12880007" alt="">
         </div>
     </section>
 
     <section class="project-container" id="projects">
       <div class="project-list">
       <h2 class="bigH">Take a look at some of my projects</h2>
-      <ul class="skill-ul">
+      <ul class="skill-ul-project">
         <li><p class="skill-li-p project1">Photo Gallery</p></li>
         <li><p class="skill-li-p project2">Gameshow App</p></li>
         <li><p class="skill-li-p project3">Web Dashboard</p></li>
