--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
             <li><p class="skill-li">Git</p></li>
           </ul>
         </div>
-
         <div class="certifi">
           <h2 class="bigH">My certificates</h2>
-          <img class="certifi-img slide-in" src="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/12880007" alt="">
+          <p class="frontendCerti">Front End Webdeveloper</p>
         </div>
     </section>
 
