--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         <div class="skills">
           <h2>Some of my skills</h2>
           <ul class="skill-ul">
-            <li><p class="skill-li">HTML5</p></li>
-            <li><p class="skill-li">CSS3</p></li>
-            <li><p class="skill-li">SASS</p></li>
-            <li><p class="skill-li">JavaScript</p></li>
-            <li><p class="skill-li">Git</p></li>
+            <li><p class="skill-li"><img src="https://img.icons8.com/ios/50/000000/html-5-filled.png" class="skill-icon"></p><p class="hidePmobile">HTML5</p></li>
+            <li><p class="skill-li"><img src="https://img.icons8.com/ios/50/000000/css3-filled.png" class="skill-icon"></p><p class="hidePmobile">CSS3</p></li>
+            <li><p class="skill-li"><img src="img/sass.png" alt="" class="skill-icon"></p><p class="hidePmobile">Sass</p></li>
+            <li><p class="skill-li"><img src="https://img.icons8.com/ios/50/000000/javascript-logo-filled.png" class="skill-icon"></p><p class="hidePmobile">JavaScript</p></li>
+            <li><p class="skill-li"><img src="https://img.icons8.com/ios/50/000000/git-filled.png" class="skill-icon"></p><p class="hidePmobile">Git</p></li>
           </ul>
         </div>
         <div class="certifi">
